Add about page, fix yAxisTicks bug in dashboard

--- a/MaritimeDataApp/MaritimeDataApp.Client/src/app/components/dashboard/dashboard.component.html
+++ b/MaritimeDataApp/MaritimeDataApp.Client/src/app/components/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
                                    [xAxisLabel]="xAxisLabel"
                                    [yAxisLabel]="yAxisLabel"
                                    [scheme]="colorScheme"
-                                   [yAxisTicks]="yAxisTicks?.length ? yAxisTicks : []" (select)="onSelect($event)">
+                                   [yAxisTicks]="yAxisTicks.length ? yAxisTicks : []" (select)="onSelect($event)">
           </ngx-charts-bar-vertical>
         </div>
         <ng-template #noChartData>
