--- a/MaritimeDataApp/MaritimeDataApp.Client/src/app/app.component.html
+++ b/MaritimeDataApp/MaritimeDataApp.Client/src/app/app.component.html
@@ -25,6 +25,11 @@
           <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 16c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4h8c0-2.21-1.79-4-4-4z"></path></svg>
           Ports
         </a>
+        <a routerLink="/about" routerLinkActive="bg-blue-700 text-white"
+           class="flex items-center px-2 py-2 text-sm font-medium rounded-md text-blue-100 hover:bg-blue-600 hover:text-white">
+          <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+          About
+        </a>
       </nav>
     </div>
   </aside>
@@ -83,6 +88,11 @@
                  class="flex items-center px-2 py-2 text-base font-medium rounded-md text-blue-100 hover:bg-blue-600 hover:text-white">
                 <svg class="w-6 h-6 mr-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 16c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4h8c0-2.21-1.79-4-4-4z"></path></svg>
                 Ports
+              </a>
+              <a routerLink="/about" routerLinkActive="bg-blue-700 text-white" (click)="toggleSidebar()"
+                 class="flex items-center px-2 py-2 text-base font-medium rounded-md text-blue-100 hover:bg-blue-600 hover:text-white">
+                <svg class="w-6 h-6 mr-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                About
               </a>
             </nav>
           </div>
