--- a/MaritimeDataApp/MaritimeDataApp.Client/src/app/app.component.css
+++ b/MaritimeDataApp/MaritimeDataApp.Client/src/app/app.component.css
@@ -1,7 +1,11 @@
 :host {
-    max-width: 1280px;
-    padding: 2rem;
-    text-align: center;
+  max-width: 1280px;
+  text-align: center;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 th, td {
