--- a/MaritimeDataApp/MaritimeDataApp.Client/src/app/components/dashboard/dashboard.component.html
+++ b/MaritimeDataApp/MaritimeDataApp.Client/src/app/components/dashboard/dashboard.component.html
@@ -1,64 +1,65 @@
 <div class="p-4 md:p-6 lg:p-8">
   <h2 class="text-2xl font-semibold text-gray-800 mb-6">Dashboard</h2>
 
-  <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
-    <div class="bg-white p-4 rounded-lg shadow">
-      <h3 class="text-lg font-medium text-gray-700 mb-4">Ships by Maximum Speed</h3>
-
-      <div *ngIf="isLoadingChart" class="text-center py-10 text-gray-500">
-        Loading chart data...
-      </div>
-
-      <div *ngIf="chartError" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded mb-4">
-        {{ chartError }}
-      </div>
-
-      <div *ngIf="!isLoadingChart && !chartError && (shipSpeedData$ | async) as chartData">
-        <div *ngIf="chartData.length > 0; else noChartData" class="chart-container w-full h-64 sm:h-80 md:h-96">
-          <ngx-charts-bar-vertical [results]="chartData"
-                                   [gradient]="gradient"
-                                   [xAxis]="showXAxisLabel"
-                                   [yAxis]="showYAxisLabel"
-                                   [legend]="showLegend"
-                                   [legendTitle]="legendTitle" [showXAxisLabel]="showXAxisLabel"
-                                   [showYAxisLabel]="showYAxisLabel"
-                                   [xAxisLabel]="xAxisLabel"
-                                   [yAxisLabel]="yAxisLabel"
-                                   [scheme]="colorScheme"
-                                   [yAxisTicks]="yAxisTicks.length ? yAxisTicks : []" (select)="onSelect($event)">
-          </ngx-charts-bar-vertical>
-        </div>
-        <ng-template #noChartData>
-          <div class="text-center py-10 text-gray-500">No data available to display the chart.</div>
-        </ng-template>
+    <div class="bg-white p-4 rounded-lg shadow min-h-[350px] flex flex-col">
+      <h3 class="text-lg font-medium text-gray-700 mb-4 flex-shrink-0">Ships by Maximum Speed</h3>
+      <div *ngIf="isLoadingShipSpeedChart" class="flex-grow flex items-center justify-center text-center py-10 text-gray-500">Loading chart data...</div>
+      <div *ngIf="shipSpeedChartError" class="flex-grow flex items-center justify-center bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded mb-4">{{ shipSpeedChartError }}</div>
+      <div *ngIf="!isLoadingShipSpeedChart && !shipSpeedChartError" class="flex-grow">
+        <ng-container *ngIf="(shipSpeedData$ | async) as chartData">
+          <div *ngIf="chartData.length > 0; else noShipSpeedData" class="chart-container w-full h-full">
+            <ngx-charts-bar-vertical [results]="chartData" [gradient]="false" [xAxis]="true" [yAxis]="true" [legend]="shipSpeedShowLegend" [showXAxisLabel]="shipSpeedShowXAxisLabel" [showYAxisLabel]="shipSpeedShowYAxisLabel" [xAxisLabel]="shipSpeedXAxisLabel" [yAxisLabel]="shipSpeedYAxisLabel" [scheme]="shipSpeedColorScheme" (select)="onSelect($event)"></ngx-charts-bar-vertical>
+          </div>
+          <ng-template #noShipSpeedData><div class="flex-grow flex items-center justify-center text-center py-10 text-gray-500">No data available.</div></ng-template>
+        </ng-container>
       </div>
     </div>
 
-    <div class="bg-white p-4 rounded-lg shadow">
-      <h3 class="text-lg font-medium text-gray-700 mb-4">Countries Visited (Last Year)</h3>
-
-      <div *ngIf="isLoadingCountries" class="text-center py-6 text-gray-500">
-        Loading countries...
+    <div class="bg-white p-4 rounded-lg shadow min-h-[350px] flex flex-col">
+      <h3 class="text-lg font-medium text-gray-700 mb-4 flex-shrink-0">Ports per Country</h3>
+      <div *ngIf="isLoadingPortsChart" class="flex-grow flex items-center justify-center text-center py-10 text-gray-500">Loading chart data...</div>
+      <div *ngIf="portsChartError" class="flex-grow flex items-center justify-center bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded mb-4">{{ portsChartError }}</div>
+      <div *ngIf="!isLoadingPortsChart && !portsChartError" class="flex-grow">
+        <ng-container *ngIf="(portsByCountryData$ | async) as chartData">
+          <div *ngIf="chartData.length > 0; else noPortsData" class="chart-container w-full h-full">
+            <ngx-charts-pie-chart [results]="chartData" [gradient]="portsGradient" [legend]="portsShowLegend" [legendTitle]="portsLegendTitle" [labels]="portsShowLabels" [doughnut]="portsIsDoughnut" [scheme]="portsColorScheme" (select)="onSelect($event)"></ngx-charts-pie-chart>
+          </div>
+          <ng-template #noPortsData><div class="flex-grow flex items-center justify-center text-center py-10 text-gray-500">No data available.</div></ng-template>
+        </ng-container>
       </div>
+    </div>
 
-      <div *ngIf="countriesError" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded mb-4">
-        {{ countriesError }}
+    <div class="bg-white p-4 rounded-lg shadow min-h-[350px] flex flex-col">
+      <h3 class="text-lg font-medium text-gray-700 mb-4 flex-shrink-0">Voyages Started per Month</h3>
+      <div *ngIf="isLoadingVoyagesChart" class="flex-grow flex items-center justify-center text-center py-10 text-gray-500">Loading chart data...</div>
+      <div *ngIf="voyagesChartError" class="flex-grow flex items-center justify-center bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded mb-4">{{ voyagesChartError }}</div>
+      <div *ngIf="!isLoadingVoyagesChart && !voyagesChartError" class="flex-grow">
+        <ng-container *ngIf="(voyagesByMonthData$ | async) as chartData">
+          <div *ngIf="chartData.length > 0; else noVoyagesData" class="chart-container w-full h-full">
+            <ngx-charts-bar-vertical [results]="chartData" [gradient]="false" [xAxis]="true" [yAxis]="true" [legend]="voyagesShowLegend" [showXAxisLabel]="voyagesShowXAxisLabel" [showYAxisLabel]="voyagesShowYAxisLabel" [xAxisLabel]="voyagesXAxisLabel" [yAxisLabel]="voyagesYAxisLabel" [scheme]="voyagesColorScheme" (select)="onSelect($event)"></ngx-charts-bar-vertical>
+          </div>
+          <ng-template #noVoyagesData><div class="flex-grow flex items-center justify-center text-center py-10 text-gray-500">No data available.</div></ng-template>
+        </ng-container>
       </div>
+    </div>
 
-      <div *ngIf="(visitedCountries$ | async) as countries; else noCountriesData">
-        <ul *ngIf="countries.length > 0; else noCountriesFound" class="list-disc list-inside space-y-1 text-gray-600">
-          <li *ngFor="let country of countries">{{ country }}</li>
-        </ul>
-        <ng-template #noCountriesFound>
-          <div class="text-center py-6 text-gray-500">No visited countries recorded for the last year.</div>
-        </ng-template>
+    <div class="bg-white p-4 rounded-lg shadow min-h-[350px] flex flex-col">
+      <h3 class="text-lg font-medium text-gray-700 mb-4 flex-shrink-0">Countries Visited (Last Year)</h3>
+      <div *ngIf="isLoadingCountries" class="flex-grow flex items-center justify-center text-center py-6 text-gray-500">Loading countries...</div>
+      <div *ngIf="countriesError" class="flex-grow flex items-center justify-center bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded mb-4">{{ countriesError }}</div>
+      <div *ngIf="!isLoadingCountries && !countriesError" class="flex-grow overflow-y-auto">
+        <ng-container *ngIf="(visitedCountries$ | async) as countries">
+          <ul *ngIf="countries.length > 0; else noCountriesFound"
+              class="list-disc list-outside space-y-1 text-gray-600 mt-2 pl-5">
+            <li *ngFor="let country of countries">{{ country }}</li>
+          </ul>
+          <ng-template #noCountriesFound>
+            <div class="flex-grow flex items-center justify-center text-center py-6 text-gray-500">No visited countries recorded for the last year.</div>
+          </ng-template>
+        </ng-container>
       </div>
-      <ng-template #noCountriesData>
-        <div *ngIf="!isLoadingCountries && !countriesError" class="text-center py-6 text-gray-500">
-          Could not load visited countries data.
-        </div>
-      </ng-template>
     </div>
 
   </div>
