Fix list inside Countries Visited (Last Year)

--- a/MaritimeDataApp/MaritimeDataApp.Client/src/app/components/dashboard/dashboard.component.html
+++ b/MaritimeDataApp/MaritimeDataApp.Client/src/app/components/dashboard/dashboard.component.html
@@ -52,7 +52,7 @@
       <div *ngIf="!isLoadingCountries && !countriesError" class="flex-grow overflow-y-auto">
         <ng-container *ngIf="(visitedCountries$ | async) as countries">
           <ul *ngIf="countries.length > 0; else noCountriesFound"
-              class="list-disc list-outside space-y-1 text-gray-600 mt-2 pl-5">
+              class="space-y-1 text-gray-600 mt-2 pl-5">
             <li *ngFor="let country of countries">{{ country }}</li>
           </ul>
           <ng-template #noCountriesFound>
